--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         OS_VARIANT: bookworm
 
     volumes:
-      - ..:/workspace:cached  
+      - ..:/workspace  
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
