--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION_VARIANT=3.11
-ARG OS_VARIANT=bookwoorm
+ARG OS_VARIANT=bullseye
 FROM python:${VERSION_VARIANT}-slim-${OS_VARIANT}
 
 ENV PYTHONUNBUFFERED 1
