--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       args:
         VERSION_VARIANT: 3.11
         OS_VARIANT: bookworm
+        USERNAME: datavant-dev
+        USER_UID: 1000
 
     volumes:
       - ..:/workspace  
