AL: Update to use cookiecutter

--- a/{{cookiecutter.app}}/.devcontainer/Dockerfile
+++ b/{{cookiecutter.app}}/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
-ARG VERSION_VARIANT=3.11
-ARG OS_VARIANT=bullseye
+ARG VERSION_VARIANT=3.12
+ARG OS_VARIANT=bookworm
 
 FROM python:${VERSION_VARIANT}-slim-${OS_VARIANT}
 
