--- a/{{cookiecutter.app}}/.devcontainer/Dockerfile
+++ b/{{cookiecutter.app}}/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-ARG VERSION_VARIANT=3.12
+ARG VERSION_VARIANT="{{version}}"
 ARG OS_VARIANT=bookworm
 
 FROM python:${VERSION_VARIANT}-slim-${OS_VARIANT}
