--- a/{{cookiecutter.app}}/pyproject.toml
+++ b/{{cookiecutter.app}}/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ada Lundhe <ada@datavant.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^{{version}}"
 fastapi = "^0.109.2"
 psycopg2 = "^2.9.9"
 sqlalchemy = "^2.0.25"
