--- a/{{cookiecutter.app}}/.devcontainer/devcontainer.json
+++ b/{{cookiecutter.app}}/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Python {{version}} FastAPI Template",
+	"name": "Python {{cookiecutter.version}} FastAPI Template",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspace",
