--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
       args:
-        VERSION_VARIANT: 3.11
+        VERSION_VARIANT: "{{cookiecutter.version}}"
         OS_VARIANT: bookworm
         USERNAME: datavant-dev
         USER_UID: 1000
