AL: remove OS_VARIANT

--- a/{{cookiecutter.app}}/.devcontainer/Dockerfile
+++ b/{{cookiecutter.app}}/.devcontainer/Dockerfile
@@ -1,6 +1,5 @@
 ARG VERSION_VARIANT="{{cookiecutter.version}}"
-ARG OS_VARIANT=bookworm
 
-FROM corpheus91/devcontainers:python-${VERSION_VARIANT}-${OS_VARIANT}
+FROM corpheus91/devcontainers:python-${VERSION_VARIANT}-bookworm
 
 EXPOSE 5000
