AL: remove OS_VARIANT

--- a/{{cookiecutter.app}}/.devcontainer/Dockerfile
+++ b/{{cookiecutter.app}}/.devcontainer/Dockerfile
@@ -2,4 +2,7 @@ ARG VERSION_VARIANT="{{cookiecutter.version}}"
 
 FROM corpheus91/devcontainers:python-${VERSION_VARIANT}-bookworm
 
+RUN apt update && \
+    apt install -y libpq-dev
+
 EXPOSE 5000
