AL: add app as tempalted arg to devcontainer.json and docker-compose.yml

--- a/{{cookiecutter.app}}/.devcontainer/docker-compose.yml
+++ b/{{cookiecutter.app}}/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  app:
+  {{cookiecutter.app}}:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
