--- a/{{cookiecutter.app}}/.devcontainer/devcontainer.json
+++ b/{{cookiecutter.app}}/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Python 3",
 	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
+	"service": "{{cookiecutter.app}}",
 	"workspaceFolder": "/workspace",
 	"customizations": {
 		// Configure properties specific to VS Code.
