--- a/{{cookiecutter.app}}/pyproject.toml
+++ b/{{cookiecutter.app}}/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "app-templates"
+name = "{{cookiecutter.app}}"
 version = "0.1.0"
 description = ""
 authors = ["Ada Lundhe <ada@datavant.com>"]
